--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,8 @@
 backup.txt
 logo.png
 log.txt
-.idea/
+.idea
+out
 *.iml
 backup.json
 
@@ -21,5 +22,6 @@ backup.json
 *.zip
 *.tar.gz
 *.rar
+
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
